apps/base/cyberchef/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cyberchef
  namespace: services
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
      kind: Gateway

  hostnames:
    - cyberchef.${main_domain}

  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /

      backendRefs:
      - name: cyberchef
        namespace: services
        port: 10219

      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: chain-forwardauth
